[metadata]
name = pas-streamer
description = Python Application Services: Streamer
long_description =
    "pas-streamer" provides an abstract API to chunk and stream data for a given resource. The file streamer is the
    reference implementation of it.
platforms = any
author = direct Netware Group et al.
author_email = web@direct-netware.de
license = MPL2
url = https://www.direct-netware.de/redirect?pas;streamer
classifiers =
    Framework :: direct PAS
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
